--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -9,3 +9,13 @@
 .custom-rounded {
   border-radius: 40px; 
 }
+
+.video-component{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 1.6rem;
+  height: 100%;
+  width: 100%;
+}
